unpackaged/main/default/objects/ebotdata__Log_Event__e/fields/ebotdata__Log_Message__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Log_Message__c</fullName>
    <description>Displays exception message or debug message</description>
    <label>Log Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>