unpackaged/main/default/objects/ebotdata__Log_Event__e/fields/ebotdata__Log_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Log_Name__c</fullName>
    <description>Name of the apex class along with the time</description>
    <label>Log Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>