unpackaged/main/default/objects/ebotdata__Log_Event__e/fields/ebotdata__Log_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Log_Type__c</fullName>
    <description>Describes the type of log : exception or debug</description>
    <label>Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>